@startuml models

Cuenta --* Usuario
DepositoCuenta --* Cuenta
DepositoGrupo --* RegistroGrupo
PrestamoGrupo --* RegistroGrupo
RegistroGrupo --* Usuario
RegistroGrupo --* Grupo
RetiroCuenta --* Cuenta
TransferenciaCuenta --* Cuenta

class Cuenta
{
    - int numeroCuenta
    - int titularDni (FK)
    - double saldo

    + cuenta(int titularDni)
    + setters(*args)
    + getters(*args)
}

class Grupo
{
    - int id
    - String nombre
    - double saldo
    - int numeroIntegrantes 

    + Grupo(String nombre)
    + setters(*args)
    + getters(*args)
}

class Usuario
{
    - int dni
    - String primerNombre
    - String segundoNombre
    - String primerApellido
    - String segundoApellido
    - String contraseña

    + Usuario(int dni, String primerNombre, String segundoNombre, String primerApellido, String segundoApellido, String contraseña)
    + setters(*args)
    + getters(*args)
}

class DepositoCuenta
{
    - int id
    - int numeroCuenta (FK)
    - double monto
    - Date fechaHora

    + Deposito(int numeroCuenta, double monto)
    + setters(*args)
    + getters(*args)
}

class DepositoGrupo
{
    - int id
    - int registroId
    - double monto
    - Date fechaHora

    + DepositoGrupo(int registroId, double monto)
    + setters(*args)
    + getters(*args)
}

class PrestamoGrupo
{
    - int id
    - int registroId (FK)
    - double monto
    - Date fechaHora

    + PrestamoGrupo(int idRegistro, double monto)
    + setters(*args)
    + getters(*args)
}

class RegistroGrupo
{
    - int id
    - int grupoId (FK)
    - int usuarioDni (FK)
    - boolean nativo

    + RegistroGrupos(int usuarioDni, int grupoId, boolean nativo)
    + setters(*args)
    + getters(*args)
}

class RetiroCuenta
{
    - int id
    - int numeroCuenta (FK)
    - double monto
    - Data fechaHora

    + Retiro(int numeroCuenta, double monto)
    + setters(*args)
    + getters(*args)
}

class TransferenciaCuenta
{
    - int id
    - int numeroCuentaOrigen (FK)
    - int numeroCuentaDestino (FK)
    - double monto
    - Date fechaHora

    + Transferencia(int numeroCuentaOrigen, int numeroCuentaDestino, double monto)
    + setters(*args)
    + getters(*args)
    
}

@enduml